# DRL-Mapping

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  trainer.py  training_laia.ipynb
data/: circuit_generator.py  cuccaroadder_q8.npz
environment/: env.py
models/: feature_extractor.py  ppo_policy.py
models/gnn/: gatv2.py
notebooks/: proves_circuit.ipynb  training_laia.ipynb
src/: trainer.py
src/circuit_generator/: random_circuit_generator.py
src/environment/: base_env.py  env_place_core.py  env_place_pair.py  utils.py
src/models/: feature_extractor.py  ppo_policy.py
src/models/gnn/: gatv2.py
src/utils/: callback.py  constants.py  trainer.py
tests/environment/: test_base_env.py  test_utils.py
tests/models/: test_feature_extractor.py
utils/: callback.py
