[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "lmp315",email = "laiamogasp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sparse (>=0.15.5,<0.16.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "stable-baselines3 (>=2.5.0,<3.0.0)",
    "sb3-contrib (>=2.5.0,<3.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "numpy (==2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"

