[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "lmp315",email = "laiamogasp@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch==2.2.1+cu118",  # Versión más nueva con CUDA 11.8 (compatible con drivers 11.7)
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.1",
    "tensorboard (>=2.19.0,<3.0.0)",
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"  # ¡Cambiado a cu118!
priority = "supplemental"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"