[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Laia MP",email = "laiamogasp@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = "3.12"
torch = "2.2.1+cu118"  # Versión más nueva con CUDA 11.8 (compatible con drivers 11.7)
stable-baselines3 = "2.4.0"
sb3-contrib = "2.4.0"
gymnasium = ">=0.29.1"
tensorboard = ">=2.19.0,<3.0.0"
torch-geometric = ">=2.6.1,<3.0.0"
pyyaml = "^6.0.2"
sparse = "0.15.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "supplemental"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

